force-app/main/default/objects/Patents__c/Patents__c.object-meta.xml
<CustomObject>
    <label>Patents</label>
    <nameField>
        <displayFormat>PAT-{00000}</displayFormat>
        <label>Patents Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>