force-app/main/default/objects/Patents__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Patents</relationshipLabel>
    <relationshipName>Patents</relationshipName>
    <type>Lookup</type>
</CustomField>