force-app/main/default/objects/Patents__c/fields/Filing_Granted_Date__c.field-meta.xml
<CustomField>
    <fullName>Filing_Granted_Date__c</fullName>
    <label>Filing / Granted Date</label>
    <type>Date</type>
</CustomField>