force-app/main/default/objects/Patents__c/fields/Granting_Agency_Country__c.field-meta.xml
<CustomField>
    <fullName>Granting_Agency_Country__c</fullName>
    <label>Granting Agency / Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>