force-app/main/default/objects/Patents__c/fields/Inventors__c.field-meta.xml
<CustomField>
    <fullName>Inventors__c</fullName>
    <label>Inventors</label>
    <length>255</length>
    <type>Text</type>
</CustomField>