force-app/main/default/objects/Patents__c/fields/Patent_Id__c.field-meta.xml
<CustomField>
    <fullName>Patent_Id__c</fullName>
    <displayFormat>PTNT-{00000}</displayFormat>
    <label>Patent Id</label>
    <type>AutoNumber</type>
</CustomField>