force-app/main/default/objects/Patents__c/fields/Patent_Number__c.field-meta.xml
<CustomField>
    <fullName>Patent_Number__c</fullName>
    <label>Patent Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>