force-app/main/default/objects/Patents__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Applicant_Proposal_Association__c</columns>
    <columns>Title__c</columns>
    <columns>Inventors__c</columns>
    <columns>Granting_Agency_Country__c</columns>
    <columns>Patent_Number__c</columns>
    <columns>Status__c</columns>
    <columns>Filing_Granted_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>